--- a/viewer.html
+++ b/viewer.html
@@ -14,5 +14,7 @@
                 </div>
             </div>
         </body>
+		<script src="js/scroll.js"></script>
 		<script src="js/viewer.js"></script>
+
 </html>
