--- a/viewer.html
+++ b/viewer.html
@@ -4,7 +4,10 @@
 			<title></title>
 			<script src="lib/pdf.js"></script>
 			<link rel="stylesheet" href="css/copy.css">
+            <link rel="stylesheet" href="css/main.css">
 		</head>
+		<style>
+		</style>
 		<body>
             <div id="outerContainer">
                 <div id="mainContainer">
